[package]
name = "beijing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.1"
oxide-auth = "0.5"
once_cell = "1.13"
jsonwebtoken = "8.1"
civilization = { path = "../." }
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
users_entities = { path = "../../services/users_service/entities" }