[package]
name = "beijing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"] }
redis = { version = "0.22", features = ["aio", "tokio-comp", "ahash"] }
tokio = { version = "1.24", features = ["full"] }
civilization = { path = "../." }
utoipa = "3.0"
utoipa-swagger-ui = "3.0"